# devmoji-rs

./: .gitignore  Cargo.toml  README.md  devmoji.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
npm/@loukotal/devmoji-rs-darwin-arm64/: package.json
npm/@loukotal/devmoji-rs-darwin-x64/: package.json
npm/@loukotal/devmoji-rs-linux-arm64-gnu/: package.json
npm/@loukotal/devmoji-rs-linux-x64-gnu/: package.json
npm/@loukotal/devmoji-rs-linux-x64-musl/: package.json
npm/@loukotal/devmoji-rs-win32-x64/: package.json
npm/devmoji-rs/: index.d.ts  index.js  package.json
npm/devmoji-rs-darwin-arm64/: package.json
npm/devmoji-rs-darwin-x64/: package.json
npm/devmoji-rs-linux-arm64-gnu/: package.json
npm/devmoji-rs-linux-x64-gnu/: package.json
npm/devmoji-rs-linux-x64-musl/: package.json
npm/devmoji-rs-win32-x64/: package.json
scripts/: bump-version.sh
src/: commits.rs  config.rs  devmoji.rs  github_emoji.rs  gitmoji.rs  lib.rs  main.rs
