[package]
name = "devmoji"
version = "0.1.3"
edition = "2021"
description = "CLI tool to add emoji to conventional commits - Rust port of devmoji"

[[bin]]
name = "devmoji"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atty = "0.2"
colored = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"
